--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,6 +22,6 @@
 		hello footer
 	</footer>
 
-	<script type="text/javascript" src="{{ site.baseurl }}js/main.js"></script>
+	<script type="text/javascript" src="{{ site.baseurl }}js_dist/main.bundle.js"></script>
 </body>
 </html>
