#4: set full logo animation

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Montserrat:100,300,700&amp;subset=latin-ext">
+	<link href="https://fonts.googleapis.com/css?family=Black+Ops+One" rel="stylesheet">
 	<script src="http://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
 	<script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.1/TweenMax.min.js"></script>
 	<link rel="icon" href="{{ site.baseurl }}img/favicon.ico" type="image/x-icon">
