--- a/_sass/1-vars/_colors.sass
+++ b/_sass/1-vars/_colors.sass
@@ -2,8 +2,9 @@
 $color-accent: #EF4339
 $color-bcg-grey: #fbfbfb
 $color-bcg: #FFF8F0
+$color-bcg-intro: #283C63
 $color-grey: #9a9a9a
 $color-grey-text: #928A97
-$color-text: #283C63
+$color-text: $color-bcg-intro
 $color-grey-text-lite: lighten($color-grey-text, 42%)
 $color-white: #fff
