--- a/css/base.sass
+++ b/css/base.sass
@@ -13,6 +13,7 @@
 // 2-tools
 @import 2-tools/mixins/appearance
 @import 2-tools/mixins/btn
+@import 2-tools/mixins/center
 @import 2-tools/mixins/checkbox
 @import 2-tools/mixins/font
 @import 2-tools/mixins/mobile-breakpoints
@@ -33,6 +34,8 @@
 // 5-objects
 
 // 6-components
+@import 6-components/layout/intro
+@import 6-components/layout/main-nav
 
 // 7-trumps
 @import 7-trumps/helper-classes
