--- a/_sass/4-elements/_body.sass
+++ b/_sass/4-elements/_body.sass
@@ -3,7 +3,7 @@ $body-antialiased: true
 body
 	+font($font-size-text, $line-height-text)
 	position: relative
-	width: 100vw
+	width: 100%
 	margin: 0
 	padding: 0
-	
+	background-color: $color-bcg
