#4: set tools animetion with scroll

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,6 +23,8 @@
 		hello footer
 	</footer>
 
+	<!-- - - - - - - - - SCRIPTS - - - - - - - - -->
+	<script type="text/javascript" src="{{ site.baseurl }}js_dist/scroll_magic/ScrollMagic.min.js"></script>
 	<script type="text/javascript" src="{{ site.baseurl }}js_dist/main.bundle.js"></script>
 </body>
 </html>
