--- a/_sass/6-components/layout/_intro.sass
+++ b/_sass/6-components/layout/_intro.sass
@@ -16,5 +16,12 @@
 			height: 50vh
 			padding: 50px
 
+	&__tools
+		+center(auto, 50%, -50%, 0)
+		bottom: -35px
+
+		svg
+			height: 25vh
+
 #wood-work *
 	+font(115px, $family: $font-logo)
