--- a/css/base.sass
+++ b/css/base.sass
@@ -35,6 +35,7 @@
 
 // 6-components
 @import 6-components/layout/intro
+@import 6-components/layout/main-content
 @import 6-components/layout/main-nav
 
 // 7-trumps
