--- a/_sass/1-vars/_fonts.sass
+++ b/_sass/1-vars/_fonts.sass
@@ -1,12 +1,12 @@
 // fonts
-$font-sans: 'Montserrat', sans-serif
+$font-sans: 'Nunito', sans-serif
 $font-serif: serif
 $font-logo: 'Black Ops One', cursive
 
 //  Font sizes
 $font-size-header-main: calc(2vw + 22px)
 $font-size-header: calc(.8vw + 15px)
-$font-size-short: calc(.3vw + 10px)
+$font-size-menu: calc(.3vw + 10px)
 $font-size-text: calc(.3vw + 13px)
 
 $line-height-header: 1.4em
