--- a/_sass/2-tools/mixins/_checkbox.sass
+++ b/_sass/2-tools/mixins/_checkbox.sass
@@ -24,7 +24,7 @@
 		display: none
 
 	label
-		+font(12px, $switch-heigth)
+		+font(12px, $line-height: $switch-heigth)
 		display: inline-block
 		position: relative
 		height: $switch-heigth
@@ -84,7 +84,7 @@
 		display: none
 
 	label
-		+font(12px, $switch-heigth)
+		+font(12px, $line-height: $switch-heigth)
 		display: inline-block
 		position: relative
 		height: $switch-heigth
@@ -144,7 +144,7 @@
 		display: none
 
 	label
-		+font(12px, $switch-heigth)
+		+font(12px, $line-height: $switch-heigth)
 		display: inline-block
 		position: relative
 		height: $switch-heigth
