--- a/_sass/6-components/layout/_main-content.sass
+++ b/_sass/6-components/layout/_main-content.sass
@@ -1,2 +1,11 @@
 .main-content
-	height: 200vh
+	min-height: 100vh
+	padding: 100px 20px
+
+	h1
+		+font($font-size-header-main, 300, $line-height-header)
+		margin-bottom: 60px
+		text-align: right
+		text-transform: uppercase
+		letter-spacing: 10px
+		color: $color-text
