--- a/css/base.sass
+++ b/css/base.sass
@@ -8,7 +8,7 @@
 // 1-vars
 @import 1-vars/colors
 @import 1-vars/fonts
-@import 1-vars/grid
+@import 1-vars/dimensions
 
 // 2-tools
 @import 2-tools/mixins/appearance
@@ -36,7 +36,9 @@
 // 6-components
 @import 6-components/layout/intro
 @import 6-components/layout/main-content
+@import 6-components/layout/main-footer
 @import 6-components/layout/main-nav
+@import 6-components/projects
 
 // 7-trumps
 @import 7-trumps/helper-classes
