--- a/_sass/2-tools/mixins/_radio.sass
+++ b/_sass/2-tools/mixins/_radio.sass
@@ -25,7 +25,7 @@
 		display: none
 
 	label
-		+font(12px, 16px)
+		+font(12px, $line-height: 16px)
 		display: inline-block
 		position: relative
 		height: $switch-heigth
