--- a/_sass/4-elements/_body.sass
+++ b/_sass/4-elements/_body.sass
@@ -1,7 +1,7 @@
 $body-antialiased: true
 
 body
-	+font($font-size-text, $line-height-text)
+	+font($font-size-text, 300, $line-height-text, $font-sans)
 	position: relative
 	width: 100%
 	margin: 0
